code cleanup: WICKET-830 (java 5)
git-svn-id: https://svn.apache.org/repos/asf/wicket/trunk@604658 13f79535-47bb-0310-9956-ffa450edef68